[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^5.1"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
